--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
  <!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
  <html>
- <head><title> 타이틀 테스트</title>
-문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의
-</head>
+ <head>
+    <meta charset="UTF-8">
+    <title>LOL 메인화면</title>
+ </head>
  <body>
-문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등
+    <img src="image/image/LoGO.png" width="200" height="60" alt="라이엇로고">
+    <h3>게임정보    기본정보  챔피언  패치 노트   새소식 등 (메뉴 정보 입력하기)</h3>
 </body>
  </html>
