--- a/index.html
+++ b/index.html
@@ -3,16 +3,86 @@
  <html>
  <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>LOL 메인화면</title>
- </head>
+    <meta name="author" content="20200938">
+    <meta name="keywords" content="computer">
+    <base href="http://127.0.0.1:5500">
+    <style>
+      table{
+         font-size: 20pt;
+         color: white;
+      }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   </body> 
+</head>
  <body style="background-color: black;">
+
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
    <div style="display: flex; justify-content: center;">
-      <img src="image/image/LoGO.png" width="200" height="60" alt="라이엇로고">
+      <a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/LoGO.png" width="200" height="60" alt="라이엇로고"></a>
     <h3 style="font-size: 24px; font-weight: bold; font-style: italic; color: white; font-family: '굴림';">게임정보    기본정보  챔피언  패치 노트   새소식 등 (메뉴 정보 입력하기)</h3>
    </div>
    <hr>
    <div style="display: flex; justify-content: center;">
       <img src="image/image/MAIN.png" width="1200" height="768">
+   </div>
+   <div style="display: flex; justify-content: center;">
+      <table border="1">
+         <caption>인기 캐릭터</caption> 
+         <tbody>
+            <tr bgcolor="red">
+               <td>사이온</td>
+               <td>아리</td>
+               <td>가렌</td>
+               <td>가렌2</td>
+               <td>가렌3</td>
+            </tr>
+            <tr bgcolor="grey">
+               <td colspan="5"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank">를 웹사이트로 접속하기</a></td>
+            </tr>
+            <tr>
+               <td bgcolor="blue"><b>카직스</b></td>
+               <td>루시안</td>
+               <td>루시안2</td>
+               <td colspan="2"><font size="13"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/image.png" width="60" height="60" alt="라이엇로고"></a>바이1, 2</font></td>
+            </tr>
+         </tbody>
+      </table>
    </div>
    <hr>
    <div style="display: flex; justify-content: center;">
