--- a/index.html
+++ b/index.html
@@ -22,29 +22,45 @@
 
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="image/image/LoGO.png" alt="Logo" width="100" height="24" class="Bootstrap">
+            </a>
+          </div>
+        </nav>
+        <a class="navbar-brand" href="#">홈페이지 테스트</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">메인페이지</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">기본정보</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">챔피언</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">패치</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">노트</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">새소식</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown link
+                고객지원
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">게임 다운로드</a></li>
+                <li><a class="dropdown-item" href="#">롤 커뮤니티</a></li>
+                <li><a class="dropdown-item" href="#">깃 허브 페이지</a></li>
               </ul>
             </li>
           </ul>
@@ -53,35 +69,45 @@
     </nav>
 
 
-   <div style="display: flex; justify-content: center;">
-      <a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/LoGO.png" width="200" height="60" alt="라이엇로고"></a>
-    <h3 style="font-size: 24px; font-weight: bold; font-style: italic; color: white; font-family: '굴림';">게임정보    기본정보  챔피언  패치 노트   새소식 등 (메뉴 정보 입력하기)</h3>
-   </div>
+
    <hr>
    <div style="display: flex; justify-content: center;">
-      <img src="image/image/MAIN.png" width="1200" height="768">
+      <img src="image/image/MAIN.png" class="img-fluid" width="1200" height="768">
    </div>
    <div style="display: flex; justify-content: center;">
-      <table border="1">
-         <caption>인기 캐릭터</caption> 
-         <tbody>
-            <tr bgcolor="red">
-               <td>사이온</td>
-               <td>아리</td>
-               <td>가렌</td>
-               <td>가렌2</td>
-               <td>가렌3</td>
-            </tr>
-            <tr bgcolor="grey">
-               <td colspan="5"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank">를 웹사이트로 접속하기</a></td>
-            </tr>
-            <tr>
-               <td bgcolor="blue"><b>카직스</b></td>
-               <td>루시안</td>
-               <td>루시안2</td>
-               <td colspan="2"><font size="13"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/image.png" width="60" height="60" alt="라이엇로고"></a>바이1, 2</font></td>
-            </tr>
-         </tbody>
+      
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">1</th>
+            <th scope="col">2</th>
+            <th scope="col">3</th>
+            <th scope="col">4</th>
+            <th scope="col">5</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>사이온</td>
+            <td>아리</td>
+            <td>가렌</td>
+            <td>가렌2</td>
+            <td>가렌3</td>
+          </tr>
+          <tr>
+            <th scope="row">공백</th>
+            <td colspan="5"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank">를 웹사이트로 접속하기</a></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td colspan="2">카직스</td>
+            <td>루시안</td>
+            <td>루시안2</td>
+            <td colspan="2"><font size="13"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/image.png" width="60" height="60" alt="라이엇로고"></a>바이1, 2</font></td>
+          </tr>
+        </tbody>
       </table>
    </div>
    <hr>
