--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   </body> 
+    <script type="text/javascript" src="js/basic_js_test.js"></script>
 </head>
  <body style="background-color: black;">
 
@@ -25,7 +25,7 @@
         <nav class="navbar bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="image/image/LoGO.png" alt="Logo" width="100" height="24" class="Bootstrap">
+              <img src="image/LoGO.png" alt="Logo" width="100" height="24" class="Bootstrap">
             </a>
           </div>
         </nav>
@@ -65,6 +65,14 @@
             </li>
           </ul>
         </div>
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" id="search_btn" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
       </div>
     </nav>
 
@@ -72,11 +80,11 @@
 
    <hr>
    <div style="display: flex; justify-content: center;">
-      <img src="image/image/MAIN.png" class="img-fluid" width="1200" height="768">
+      <img src="image/MAIN.png" class="img-fluid" width="1200" height="768">
    </div>
    <div style="display: flex; justify-content: center;">
       
-      <table class="table">
+      <table class="table table-dark table-striped-columns">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -105,7 +113,7 @@
             <td colspan="2">카직스</td>
             <td>루시안</td>
             <td>루시안2</td>
-            <td colspan="2"><font size="13"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image/image.png" width="60" height="60" alt="라이엇로고"></a>바이1, 2</font></td>
+            <td colspan="2"><font size="13"><a href="https://www.leagueoflegends.com/ko-kr/how-to-play/" target="_blank"><img src="image/image.png" width="60" height="60" alt="라이엇로고"></a>바이1, 2</font></td>
           </tr>
         </tbody>
       </table>
