--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/basic_js_test.js" defer></script>
+    <script type="text/javascript" src="js/data_type.js" defer></script>
+    <script type="text/javascript" src="js/search.js" defer></script>
+    <script type="text/javascript" src="js/popup.js" defer></script>
+    <script type="text/javascript" src="js/popup_close.js" defer></script>
 </head>
- <body style="background-color: black;">
+ <body style="background-color: black;" onload="pop_up();">
 
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -67,10 +71,11 @@
         </div>
         <nav class="navbar bg-body-tertiary">
           <div class="container-fluid">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" id="search_btn" type="submit">Search</button>
-            </form>
+            <form class="d-flex" role="search" onsubmit="return googleSearch();">
+              <input class="form-control me-2" id="search_input" name="q" type="search" placeholder="키워드 입력" aria-label="Search">
+              <button class="btn btn-outline-success" id="search_btn" type="submit">검색하기</button>
+              </form>
+              <a href="login/login.html" class="btn btn-outline-success" id="login_btn">로그인 하기</a>
           </div>
         </nav>
       </div>
@@ -122,5 +127,6 @@
    <div style="display: flex; justify-content: center;">
       <h3 style="font-size: 24px; font-weight: bold; font-style: italic; color: white; font-family: '굴림';">라이엇 게임 회사 정보 2024년 3월 작성됨</h3>
    </div>
+   <h1 class="display-4"><div id="Time" class="clock"></div></h1>
 </body>
  </html>
